2009-07-29  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: register Windows Media Player plugin;
  update Path environment variable;
  got rid of "Feature will be installed when required"


2009-07-19  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: "all" now builds all Win32 binaries except XBMC,
  "mingw" just the ones compiled with MinGW (including new libasap.a)

* win32/setup/asap.wxs, win32/Makefile, win32/USAGE:
  setup under construction using Wix

* README, gsplayer/USAGE, win32/gui.rc: some rewordings


2009-07-17  Piotr Fusik  <fox@scene.pl>
* gsplayer/gspasap.def, win32/Makefile:
  compile GSPlayer plugin for Windows NT with MinGW
  (by the way, Windows NT port of GSPlayer is discontinued)


2009-07-15  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: converted from nmake to gmake

* java/Makefile: cleanup


2009-07-10  Piotr Fusik  <fox@scene.pl>
* asap.c, win32/gui.c, win32/wasap/wasap.c: source code indentation


2009-07-02  Piotr Fusik  <fox@scene.pl>
* asap.c: source code shortened using the UWORD macro

* java/ASAPApplet.java: small refactoring


2009-06-10  Piotr Fusik  <fox@scene.pl>
* asap.c, java/ASAP.ppjava: ASAP_DurationToString() returns an empty string
  and not garbage if passed 100 minutes or more


2009-06-05  Piotr Fusik  <fox@scene.pl>
* gsplayer/USAGE, README, win32/Makefile: created wince usage doc

* gsplayer/Makefile, win32/Makefile: created wince Makefile

* csharp/Makefile: converted from nmake to gmake

* win32/Makefile: use unix2dos and not perl (cygwin's perl outputs LFs)


2009-06-02  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h: added const to ASAP_GetPosition and ASAP_GetWavHeader


2009-06-01  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c, win32/gui.rc, win32/gui.h: added "Save as WAV"

* raw2c.pl: made shorter

* asap2wav.c: error message for trailing options which were silently ignored


2009-05-29  Piotr Fusik  <fox@scene.pl>
* win32/Makefile, asap.c, win32/winamp/in_asap.c, win32/winamp/ipc_pe.h,