@@ -1,3 +1,7 @@
+2009-07-30  Piotr Fusik  <fox@scene.pl>
+* win32/wasap/wasap.c: WASAP icon in "About"
+
+
 2009-07-29  Piotr Fusik  <fox@scene.pl>
 * win32/setup/asap.wxs: register Windows Media Player plugin;
   update Path environment variable;
